Update Auto Upgrade Podspec Version workflows.yml

--- a/.github/workflows/Auto Upgrade Podspec Version workflows.yml
+++ b/.github/workflows/Auto Upgrade Podspec Version workflows.yml
@@ -18,26 +18,26 @@ jobs:
         version=$(echo ${{ steps.get-branch.outputs.branch }} | sed -e "s/release\///g")
         echo "::set-output name=new_release_version::${version}"
         
-    - name: Create bot branch
-      if: ${{ steps.get-branch.outputs.is_release_branch =='YES' }}
-      id: create_bot_branch
-      run: |
-          bot_branch="bot/${{ steps.get-branch.outputs.branch }}"
-          echo "::set-output name=bot_branch::${bot_branch}"
-          git checkout -b ${bot_branch}
+#     - name: Create bot branch
+#       if: ${{ steps.get-branch.outputs.is_release_branch =='YES' }}
+#       id: create_bot_branch
+#       run: |
+#           bot_branch="bot/${{ steps.get-branch.outputs.branch }}"
+#           echo "::set-output name=bot_branch::${bot_branch}"
+#           git checkout -b ${bot_branch}
           
-    - name: Push bot branch
-      if: ${{ steps.get-branch.outputs.is_release_branch == 'YES' }}
-      uses: ad-m/github-push-action@master
-      with:
-          branch: ${{ steps.create_bot_branch.outputs.bot_branch }}
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          force: true
+#     - name: Push bot branch
+#       if: ${{ steps.get-branch.outputs.is_release_branch == 'YES' }}
+#       uses: ad-m/github-push-action@master
+#       with:
+#           branch: ${{ steps.create_bot_branch.outputs.bot_branch }}
+#           github_token: ${{ secrets.GITHUB_TOKEN }}
+#           force: true
           
-    - name: Checkout bot branch
-      uses: actions/checkout@master
-      with:
-        ref: ${{ steps.create_bot_branch.outputs.bot_branch }}
+#     - name: Checkout bot branch
+#       uses: actions/checkout@master
+#       with:
+#         ref: ${{ steps.create_bot_branch.outputs.bot_branch }}
           
     - name: Find and replace the current spec version to new version
       if: ${{ steps.get-branch.outputs.is_release_branch == 'YES' }}
