--- a/.github/workflows/Auto Release Tag workflows.yml
+++ b/.github/workflows/Auto Release Tag workflows.yml
@@ -25,13 +25,15 @@ jobs:
       run: |
         version=$(echo ${{ steps.pr_data.outputs.branch }} | sed -e "s/release\///g")
         is_release_branch="NO"
-        echo "The version = ${{ version }}"
+        if ["release/${version}" == ${steps.pr_data.outputs.branch} ]; then is_release_branch="YES"; fi
+        echo "::set-output name=release_version::${version}"
+        echo "::set-output name=is_release_branch::${is_release_branch}"
         
     - name: Print branch name
       run: |
-        echo "The branch ${{ steps.pr_data.outputs.branch }} have
-         is_release_branch = ${{ steps.get-version.outputs.is_release_branch }}
-         release_version = ${{ steps.get-version.outputs.release_version }}"
+        echo "The branch ${{ steps.pr_data.outputs.branch }} is used for checking"
+        echo "This branch has is_release_branch = ${{ steps.get-version.outputs.is_release_branch }}"
+        echo "This branch has release_version = ${{ steps.get-version.outputs.release_version }}"
       
     - name: Create Release
       if: ${{ steps.get-version.outputs.is_release_branch == 'YES' }}
