Update Auto Release Tag workflows.yml

--- a/.github/workflows/Auto Release Tag workflows.yml
+++ b/.github/workflows/Auto Release Tag workflows.yml
@@ -23,10 +23,10 @@ jobs:
     - name: Check and get release version if branch name is an `release/*`
       id: get-version
       run: |
-        branch="release/1.1.3"
+        branch="${{steps.pr_data.outputs.branch}}"
         version=$(echo ${branch} | sed -e "s/release\///g")
         is_release_branch="NO"
-        if ["release/${version}" == ${branch} ]; then is_release_branch="YES"; fi
+        if [release/${version} == ${branch} ]; then is_release_branch="YES"; fi
         echo "::set-output name=release_version::${version}"
         echo "::set-output name=is_release_branch::${is_release_branch}"
         
