--- a/.github/workflows/Auto Release Tag workflows.yml
+++ b/.github/workflows/Auto Release Tag workflows.yml
@@ -25,8 +25,8 @@ jobs:
       run: |
         branch="${{steps.pr_data.outputs.branch}}"
         version=$(echo ${branch} | sed -e "s/release\///g")
-        is_release_branch="NO"
-        if [release/${version} == ${branch} ]; then is_release_branch="YES"; fi
+        is_release_branch="YES"
+        if [ release/${version} == ${branch} ]; then is_release_branch="YES"; fi
         echo "::set-output name=release_version::${version}"
         echo "::set-output name=is_release_branch::${is_release_branch}"
         
