Update Auto Release Tag workflows.yml

--- a/.github/workflows/Auto Release Tag workflows.yml
+++ b/.github/workflows/Auto Release Tag workflows.yml
@@ -9,39 +9,44 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Get branch name based on PR
+    - name: Get branch name of PR
       uses: andrevalentin/get-branch-name-by-pr@master
       id: pr_data
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
         pr-id: ${{ github.event.pull_request.number }}
         
-    - name: Print branch name
+    - name: Print branch name for debugging
       run: |
         echo "This is PR from branch ${{ steps.pr_data.outputs.branch }}"
     
-    - name: Get and check if branch name is an `release/*`
+    - name: Check if branch name is an `release/*`
       uses: uynguyen-wonderlabs/get-branch-name-github-action@master
-      id: get-branch
+      id: check-branch
       with:
         branch: ${{ steps.pr_data.outputs.branch }}
         
-    - name: Check and get release version only
-      if: ${{ steps.get-branch.outputs.is_release_branch == 'YES' }}
+    - name: Get release version only
+      if: ${{ steps.check-branch.outputs.is_release_branch == 'YES' }}
       id: get-version
       run: |
-        version=$(echo ${{ steps.get-branch.outputs.branch }} | sed -e "s/release\///g")
+        version=$(echo ${{ steps.pr_data.outputs.branch }} | sed -e "s/release\///g")
         echo "::set-output name=release_version::${version}"
-        echo ${version}
+        echo "This is the version which is detected from release branch name: ${version}"
         
-    - name: Print branch name
+    - name: Print data for debugging
       run: |
         echo "The branch ${{ steps.pr_data.outputs.branch }} is used for checking"
-        echo "This branch has is_release_branch = ${{ steps.get-branch.outputs.is_release_branch }}"
+        echo "This branch has is_release_branch = ${{ steps.check-branch.outputs.is_release_branch }}"
         echo "This branch has release_version = ${{ steps.get-version.outputs.release_version }}"
-      
+    - name: Changelog
+      uses: scottbrenner/generate-changelog-action@master
+      id: get_changelog
+      env:
+          REPO: ${{ github.repository }}
+          
     - name: Create Release tag
-      if: ${{ steps.get-branch.outputs.is_release_branch == 'YES' }}
+      if: ${{ steps.check-branch.outputs.is_release_branch == 'YES' }}
       id: create_release
       uses: actions/create-release@v1
       env:
@@ -51,8 +56,7 @@ jobs:
           release_name: Release ${{ steps.get-version.outputs.release_version }}
           commitish: master
           body: |
-            Changes in this Release
-            - First Change
+            ${{ steps.get_changelog.outputs.changelog }}
             - Second Change
           draft: false
           prerelease: false
