--- a/.github/workflows/Auto Release Tag workflows.yml
+++ b/.github/workflows/Auto Release Tag workflows.yml
@@ -62,7 +62,7 @@ jobs:
           
     - name: Push the new spec into private specs
       run: |
-         REPO_NAME="${{ github.event.repository.name }}"
-         SOURCE_URL="git@github.com:${{ REPO_NAME }}.git"
-         pod repo add ${REPO_NAME} ${SOURCE_URL}
-         pod repo add ${REPO_NAME} https://github.com/SPHTech/Specs.git
+         REPO_NAME="Temp"
+         SOURCE_URL="git@github.com:${{ github.event.repository.name }}.git"
+         pod repo add ${{github.event.repository.name}} ${SOURCE_URL}
+         pod repo add ${{github.event.repository.name}} https://github.com/SPHTech/Specs.git
