Update Auto Release Tag workflows.yml

--- a/.github/workflows/Auto Release Tag workflows.yml
+++ b/.github/workflows/Auto Release Tag workflows.yml
@@ -9,24 +9,24 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Get branch name of PR
+    - name: 1. Get branch name of PR
       uses: andrevalentin/get-branch-name-by-pr@master
       id: pr_data
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
         pr-id: ${{ github.event.pull_request.number }}
         
-    - name: Print branch name for debugging
+    - name: 2. Print branch name for debugging
       run: |
         echo "This is PR from branch ${{ steps.pr_data.outputs.branch }}"
     
-    - name: Check if branch name is an `release/*`
+    - name: 3. Check if branch name is an `release/*`
       uses: uynguyen-wonderlabs/get-branch-name-github-action@master
       id: check-branch
       with:
         branch: ${{ steps.pr_data.outputs.branch }}
         
-    - name: Get release version only
+    - name: 4. Get release version only
       if: ${{ steps.check-branch.outputs.is_release_branch == 'YES' }}
       id: get-version
       run: |
@@ -34,18 +34,19 @@ jobs:
         echo "::set-output name=release_version::${version}"
         echo "This is the version which is detected from release branch name: ${version}"
         
-    - name: Print data for debugging
+    - name: 5. Print data for debugging
       run: |
         echo "The branch ${{ steps.pr_data.outputs.branch }} is used for checking"
         echo "This branch has is_release_branch = ${{ steps.check-branch.outputs.is_release_branch }}"
         echo "This branch has release_version = ${{ steps.get-version.outputs.release_version }}"
-    - name: Changelog
+   
+    - name: 6. Get change log
       uses: scottbrenner/generate-changelog-action@master
       id: get_changelog
       env:
           REPO: ${{ github.repository }}
           
-    - name: Create Release tag
+    - name: 7. Create Release tag
       if: ${{ steps.check-branch.outputs.is_release_branch == 'YES' }}
       id: create_release
       uses: actions/create-release@v1
